# ws_navi

./: .gitignore  .pre-commit-config.yaml  GITHUB_ACTIONS_SETUP.md  README.md  README_GITHUB.md  activate_env.sh  dagger.toml  install_dependencies.sh  pyproject.toml  setup_python_env.sh  setup_workspace.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json  entrypoint.sh  initialize.sh  post-create.sh  post-start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
ci/: __init__.py  dev.py  dev.sh  main.py  run.sh
src/vehicle_bringup/: CMakeLists.txt  package.xml
src/vehicle_bringup/config/: cartographer.lua
src/vehicle_bringup/launch/: vehicle_bringup.launch.py
src/vehicle_control/: CMakeLists.txt  package.xml
src/vehicle_description/: CMakeLists.txt  package.xml
src/vehicle_description/config/: vehicle_view.rviz
src/vehicle_description/launch/: robot_state_publisher.launch.py  view_robot.launch.py
src/vehicle_description/urdf/: vehicle.urdf.xacro  vehicle_gazebo.urdf.xacro
src/vehicle_localization/: CMakeLists.txt  package.xml
src/vehicle_localization/config/: ekf.yaml
src/vehicle_localization/launch/: localization.launch.py
src/vehicle_navigation/: CMakeLists.txt  package.xml
src/vehicle_navigation/config/: amcl.yaml  bt_navigator.yaml  controller.yaml  costmap_2d.yaml  lifecycle_manager.yaml  map_server.yaml  nav2_params.yaml  planner_server.yaml  waypoint_follower.yaml
src/vehicle_navigation/launch/: navigation.launch.py
src/vehicle_simulation/: CMakeLists.txt  package.xml
src/vehicle_simulation/launch/: gazebo.launch.py
src/vehicle_simulation/worlds/: test_world.world
src/vehicle_tools/: setup.py
src/vehicle_tools/gps/: converter.py
src/vehicle_tools/navigation/: analyzer.py
tests/: conftest.py  test_gps_utils.py
