<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_bringup</name>
  <version>1.0.0</version>
  <description>Main launch files for the vehicle</description>
  <maintainer email="user@example.com">Vehicle Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>vehicle_description</exec_depend>
  <exec_depend>vehicle_simulation</exec_depend>
  <exec_depend>vehicle_navigation</exec_depend>
  <exec_depend>vehicle_localization</exec_depend>
  <exec_depend>vehicle_control</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>cartographer_rviz</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
